# SiMPL

./: Cargo.toml  readme.md  resources.md  rustfmt.toml
crates/simpl-codegen/: Cargo.toml
crates/simpl-codegen/src/: anf.rs  lib.rs
crates/simpl-codegen/src/snapshots/: simpl_codegen__anf__test__normalize_app.snap  simpl_codegen__anf__test__normalize_if-2.snap  simpl_codegen__anf__test__normalize_if.snap  simpl_codegen__anf__test__normalize_lambda-2.snap  simpl_codegen__anf__test__normalize_lambda.snap  simpl_codegen__anf__test__normalize_let.snap  simpl_codegen__anf__test__normalize_lit.snap
crates/simpl-semantics/: Cargo.toml
crates/simpl-semantics/src/: infer.rs  lib.rs  test.rs  ty.rs
crates/simpl-syntax/: Cargo.toml
crates/simpl-syntax/src/: ast.rs  grammar.lalrpop  lib.rs  test.rs
crates/simpl-syntax2/src/: ast.rs  grammar.lalrpop  lib.rs  test.rs
crates/simpl-types/: Cargo.toml
crates/simpl-types/src/: annotate.rs  arena.rs  ast.rs  constraint.rs  lib.rs  pp.rs  subst.rs  test.rs  ty.rs  typed_ast.rs  unify.rs
crates/simpl-types/src/snapshots/: simpl_types__pp__test__pp_app-2.snap  simpl_types__pp__test__pp_app.snap  simpl_types__pp__test__pp_if-2.snap  simpl_types__pp__test__pp_if.snap  simpl_types__pp__test__pp_lambda-2.snap  simpl_types__pp__test__pp_lambda.snap  simpl_types__pp__test__pp_let-2.snap  simpl_types__pp__test__pp_let.snap  simpl_types__pp__test__pp_lit.snap  simpl_types__pp__test__pp_var.snap
crates/simpl-types2/: Cargo.toml
crates/simpl-types2/src/: ast.rs  constraint.rs  hir.rs  lib.rs  subst.rs  test.rs  ty.rs  unify.rs
src/: grammar.lalrpop  lib.rs
src/codegen/: anf.rs  closure.rs  compile.rs  gensym.rs  llvm.rs  llvm3.rs  mod.rs  rename.rs  test.rs  test3.rs  types.rs  util.rs
src/codegen-c/: anf.rs  closure.rs  compile.rs  gensym.rs  mod.rs  prelude.h  rename.rs  util.rs
src/codegen-c/closure/: pp.rs
src/codegen-c/snapshots/: simpl__codegen__anf__test__normalize_if-2.snap  simpl__codegen__anf__test__normalize_lambda-2.snap  simpl__codegen__anf__test__normalize_lambda.snap  simpl__codegen__anf__test__normalize_lit.snap  simpl__codegen__anf__test__normalize_var.snap  simpl__codegen__compile__test__compile_if-2.snap  simpl__codegen__compile__test__compile_if.snap  simpl__codegen__compile__test__compile_lit-2.snap  simpl__codegen__compile__test__compile_lit-3.snap  simpl__codegen__compile__test__compile_lit.snap  simpl__codegen__rename__test__letrec.snap  simpl__codegen__rename__test__nested_let.snap
src/codegen/closure/: pp.rs
src/codegen/snapshots/: simpl__codegen__anf__test__normalize_app.snap  simpl__codegen__anf__test__normalize_if-2.snap  simpl__codegen__test__app.snap  (+55 more)
src/hir/: mod.rs  pp.rs
src/syntax/: ast.rs  grammar.lalrpop  mod.rs  test.rs
src/types/: ast.rs  constraint.rs  mod.rs  pp.rs  subst.rs  test.rs  ty.rs  unify.rs
src/util/: counter.rs
(+83 files in other folders)
