[package]
name = "simpl"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"
derive_more = "0.99.9"
simple-symbol = "3.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
indexmap = "1.5.1"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dev-dependencies]
insta = "0.16.1"
