[package]
name = "simpl-codegen"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simpl-types = {path = "../simpl-types"}
derive_more = "0.99.9"
extend = "0.1.2"
pretty_assertions = "0.6.1"
insta = "0.16.1"
