[package]
name = "simpl-types"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simpl-syntax = {path = "../simpl-syntax"}
id-arena = "2.1.1"
derive_more = "0.99.9"
