[package]
name = "simpl-types"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simpl-syntax = {path = "../simpl-syntax"}
derive_more = "0.99.9"
extend = "0.1.2"
pretty = "0.10.0"

[dev-dependencies]
insta = "0.16.1"
