[package]
name = "simpl-types2"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simpl-syntax2 = {path = "../simpl-syntax2"}
derive_more = "0.99.9"

[dev-dependencies]
insta = "0.16.1"
